# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: logic.py  parity_check.py
brain_games/games/: arithmetic_progression.py  calculator.py  gcd.py  parity_check.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
